[package]
name = "nercprint"
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>", "Nikita Sychev <root@nsychev.ru>"]
edition = "2021"
license = "BSD-3-Clause"
version = "0.3.0"

[dependencies]
anyhow = "1"
async-compression = {version = "0.4", features = ["futures-io", "gzip"], default-features = false}
async-trait = "0.1"
derive_builder = "0.12"
futures = "0.3"
hyper = {version = "0.14", features = ["http1", "server", "stream"], default-features = false}
ipp = "4"
num-traits = "0.2"
thiserror = "1.0"
tokio = {version = "1", features = ["rt-multi-thread", "macros"], default-features = false}
tokio-util = {version = "0.7", features = ["io", "compat"], default-features = false}
uuid = "1"
lopdf = { version = "0.32.0", features = ["chrono_time", "nom_parser"], default-features = false }
png = "0.17.2"
rusttype = "*"
imageproc = "*"
image = "*"
printers = "*"
