[package]
name = "watermark-printer"
authors = ["Nikita Sychev <root@nsychev.ru>"]
edition = "2021"
license = "MIT"
version = "1.0.0"

[dependencies]
ab_glyph = "0.2"
anyhow = "1"
async-compression = {version = "0.4", features = ["futures-io", "gzip"], default-features = false}
async-trait = "0.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
derive_builder = "0.20.2"
futures = "0.3"
hostname = "0.4.2"
hyper = {version = "0.14", features = ["http1", "server", "stream", "tcp"], default-features = false}
image = "0.25"
imageproc = "0.25"
ipp = "5"
lopdf = { version = "0.38" }
mlua = { version = "0.11.5", features = ["lua54", "send", "vendored"] }
num-traits = "0.2"
png = "0.18"
scopeguard = "1.2.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = {version = "1", features = ["rt-multi-thread", "macros"], default-features = false}
tokio-util = {version = "0.7", features = ["io", "compat"], default-features = false}
uuid = { version = "1", features = ["v3", "v4"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }
